# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "jimage"
version         = "0.2.4"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2018"
description     = "Safe bindings to jimage.dll, allowing you to read jimage format 'modules' files from AdoptOpenJDK containing class metadata, resources, etc."
repository      = "https://github.com/MaulingMonkey/jimage"
keywords        = ["java", "jvm", "jimage", "0xCAFEDADA"]
categories      = ["api-bindings"]
license         = "MIT OR Apache-2.0"
include         = ["/**/*.rs", "/Cargo.toml", "/LICENSE", "/Readme.md"]
readme          = "Readme.md"

[dependencies]
jimage-sys      = { path = "../jimage-sys", version = "0.1.0" }
jni-sys         = "0.3"

[dev-dependencies]
lazy_static     = "1"

[package.metadata.docs.rs]
features        = ["nightly"]

[badges]
maintenance     = { status = "experimental" }

[features]
nightly         = []
